--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1458,3 +1458,10 @@ booktitle = {Archiv. Math. Logik}
   pages={83--107},
   year={2000}
 }
+
+@inproceedings{castagna2014polymorphic,
+  title={Polymorphic functions with set-theoretic types: part 1: syntax, semantics, and evaluation},
+  author={Castagna, Giuseppe and Nguyen, Kim and Xu, Zhiwu and Im, Hyeonseung and Lenglet, Sergue{\"\i} and Padovani, Luca},
+  booktitle={Principles of Programming Languages (POPL)},
+  year={2014}
+}
