--- a/packages.tex
+++ b/packages.tex
@@ -49,7 +49,7 @@
   breaklines=true,                % sets automatic line breaking
   breakatwhitespace=true,         % sets if automatic breaks should only happen at whitespace
   escapeinside={(*}{*)},
-  literate={lam}{{$\lambda$}}1 {->}{{$\rightarrow$}}1 {Top}{{$\top$}}1 {o+o}{{$\oplus$}}1 {=>}{{$\Rightarrow$}}1 {/\\}{{$\Lambda$}}1,
+  literate={lam}{{$\lambda$}}1 {->}{{$\rightarrow$}}1 {Top}{{$\top$}}1 {o+o}{{$\oplus$}}1 {=>}{{$\Rightarrow$}}1 {and}{{$\land$}}1 {/\\}{{$\Lambda$}}1,
   tabsize=2,
   commentstyle=\color{purple}\ttfamily,
   stringstyle=\color{red}\ttfamily,
@@ -82,7 +82,7 @@
 
 
 \lstdefinelanguage{JavaScript}{
-  keywords={const, extends, super, class, export, boolean, throw, implements, import, this, typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywords={function, const, extends, super, class, export, boolean, throw, implements, import, this, typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
   identifierstyle=\color{black},
   comment=[l]{//},
   morecomment=[s]{/*}{*/},
